--- a/src/components/aboutus/aboutus.module.css
+++ b/src/components/aboutus/aboutus.module.css
@@ -34,7 +34,7 @@ gap: 4rem;
 
 .header {
   color: rgba(255, 255, 255, 0.60);
-  font-family: "TWK Lausanne Pan";
+  font-family: "TWK Lausanne Pan 300";
   font-size: 3.25rem;
   font-style: normal;
   font-weight: 300;
