--- a/src/components/chat/chat.module.css
+++ b/src/components/chat/chat.module.css
@@ -1,38 +1,34 @@
 .container {
   max-width: 100%;
-  height: 45.25rem;
+  
+  height: 32.1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   
   overflow: hidden;
+  margin-bottom: 2.62rem;
 }
 
 .contentContainer {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
   display: inline-flex;
+  width: 85rem;
   
-  width: 76.3rem;
   flex-direction: column;
   align-items: flex-start;
-  gap: 4.375rem;
-  padding-right: 9.19rem;
   
-}
-
-.top {
-  display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 4.375rem;
-}
-
-.bottom {
-  display: flex;
-align-items: flex-start;
-gap: 4rem;
 }
 
 .header {
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: left;
+  flex-wrap: wrap;
+  
+
   color: rgba(255, 255, 255, 0.60);
   font-family: "TWK Lausanne Pan 300";
   font-size: 3.25rem;
@@ -40,7 +36,9 @@ gap: 4rem;
   font-weight: 300;
   line-height: 110%;
   letter-spacing: -0.065rem;
-  max-width: 28.1875rem;
+  max-width: 40.2375rem;
+  margin-top: 2rem;
+  
 }
 
 .title {
@@ -51,55 +49,46 @@ gap: 4rem;
   font-weight: 300;
   line-height: 110%; /* 3.575rem */
   letter-spacing: -0.065rem;
-  margin: 0;
-  
-  display: inline-flex
+  display: inline-block;
 }
 
-.texttitle {
-  color: #FFF;
-font-family: "TWK Lausanne Pan 300";
-font-size: 1rem;
-font-style: normal;
-font-weight: 300;
-line-height: 130%; /* 1.3rem */
-letter-spacing: -0.02rem;
-margin-bottom: 0.88rem;
-margin-top: 1.31rem;
+.body {
+  margin-top: 13.6875rem;
+  display: inline-flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 6px;
 }
 
-
-
-.firstParagraph {
+.bodyText {
   color: #FFF;
   font-family: "TWK Lausanne Pan 300";
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 300;
-  line-height: 130%; /* 1.3rem */
-  letter-spacing: -0.02rem;
-  opacity: 0.6;
-  margin-bottom: 0.88rem;
-  width: 22.75rem;
+  line-height: 130%; /* 1.625rem */
+  letter-spacing: -0.025rem;
 }
 
-.secondParagraph {
+.footer {
   color: #FFF;
   font-family: "TWK Lausanne Pan 300";
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 300;
-  line-height: 130%; /* 1.3rem */
-  letter-spacing: -0.02rem;
-  opacity: 0.6;
-  width: 22.75rem;
+  line-height: 130%; /* 1.625rem */
+  letter-spacing: -0.025rem;
+  max-width: 13rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .line {
   width: 85rem;
 height: 0.0625rem;
+
 opacity: 0.25;
 background: #FFF;
 color: #FFF;
-  margin-bottom: 6rem;
+
 }
