--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -1,13 +1,19 @@
 .container {
+  max-width: 100%;
+  height: 45.25rem;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  padding: 10.125rem 2.5rem 12.25rem 2.5rem;
-  
-  left: calc(50% - 1440px/2);
-  
-  gap: 15rem;
   justify-content: center;
+  
+  overflow: hidden;
+}
+
+.contentContainer {
+  display: inline-flex;
+  padding: 10.125rem 2.5rem 12.25rem 2.5rem;
+  align-items: center;
+  gap: 16.0625rem;
+  
 }
 
 .aboutContainer {
@@ -83,5 +89,91 @@
   background-color: #FFF; /* Set the color of the underline */
   box-shadow: 0px -1px 1px rgba(255, 255, 255, 0.979); /* Increase contrast with a darker shadow */
   display: block;
+}
+
+.pictures {
+  position: absolute;
+  
+  
+  z-index: 999; /* Ensure it is on top of other elements */
+}
+
+
+
+.stacknet {
+  border-radius: 2.5rem;
+  background: url(../../images/about_3.png) lightgray 50%;
+  background-size: cover;
+  width: 18.5625rem;
+  height: 13.125rem;
+  border-radius: 0.625rem;
+  position: absolute;
+  margin-left: 47rem;
+  margin-top: 8.3rem;
+  
+}
+
+.poznan {
+  background: url(../../images/about_1.png) lightgray 50%;
+  background-size: cover;
+  width: 13.125rem;
+  height: 18.5625rem;
+  border-radius: 0.625rem;
+  position: absolute;
+  margin-left: 12rem;
+  margin-top: -5.3rem;
+}
+
+.sternum {
+  background: url(../../images/about_2.png) lightgray 50%;
+  background-size: cover;
+  width: 18.5625rem;
+  height: 13.125rem;
+  border-radius: 0.625rem;
+  position: absolute;
+  
+  margin-left: 63rem;
+  margin-top: -15.3rem;
+}
+
+.trackable {
+  background: url(../../images/about_4.png) lightgray 50%;
+  background-size: cover;
+  width: 13.125rem;
+  height: 18.5625rem; 
+  border-radius: 0.625rem;
+  position: absolute;
+  margin-left: 38rem;
+  margin-top: -15.3rem;
+}
+
+.introduction.hovering {
+  animation: fadeOut 0.5s forwards;
+}
+
+.aboutContainer.hovering {
+  animation: fadeOut 0.5s forwards;
+}
+
+.pictures.hovering {
+  animation: fadeIn 0.5s forwards;
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
