--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -155,8 +155,28 @@
   animation: fadeOut 0.5s forwards;
 }
 
+.aboutButtonContainer.hovering {
+  animation: fadeOut 0.5s forwards;
+}
+
 .pictures.hovering {
   animation: fadeIn 0.5s forwards;
+}
+
+.introduction:not(.hovering) {
+  animation: fadeIn 0.5s forwards;
+}
+
+.aboutContainer:not(.hovering) {
+  animation: fadeIn 0.5s forwards;
+}
+
+.aboutButtonContainer:not(.hovering) {
+  animation: fadeIn 0.3s forwards;
+}
+
+.pictures:not(.hovering) {
+  animation: fadeOut 1s forwards;
 }
 
 @keyframes fadeOut {
