--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -29,6 +29,93 @@
   font-style: normal;
   font-weight: 300;
   line-height: 130%; 
+  text-decoration: none;
+  display: flex;
+    
+  overflow: hidden;
+}
+
+
+.letter {
+  backface-visibility: hidden;
+  display: block;
+  font-style: normal;
+  transform: translateY(-17px) translateZ(0); /* Base state */
+  transition: transform 0.3s ease;
+  text-shadow: 0px 17px 0px rgb(255, 255, 255);
+}
+
+.duplicatedLetter {
+  backface-visibility: hidden;
+  position: absolute;
+  font-style: normal;
+  transform: translateY(-17px) translateZ(0); /* Base state */
+  transition: transform 0.3s ease;
+  visibility: hidden;
+  
+}
+
+.link:hover .duplicatedLetter {
+  transform: translateY(0px) translateZ(0);
+  visibility: visible;
+  
+}
+
+
+.link:hover .letter {
+  transform: translateY(0px) translateZ(0);
+}
+
+.letter:nth-child(0) {
+  transition-delay: .0s;
+}
+
+.letter:nth-child(1) {
+  transition-delay: .05s;
+}
+
+.letter:nth-child(2) {
+  transition-delay: .10s;
+}
+
+.letter:nth-child(3) {
+  transition-delay: .15s;
+}
+
+.letter:nth-child(4) {
+  transition-delay: .20s;
+}
+
+.letter:nth-child(5) {
+  transition-delay: .25s;
+}
+
+.letter:nth-child(6) {
+  transition-delay: .30s;
+}
+
+.letter:nth-child(7) {
+  transition-delay: .35s;
+}
+
+.letter:nth-child(8) {
+  transition-delay: .40s;
+}
+
+.letter:nth-child(9) {
+  transition-delay: .45s;
+}
+
+.letter:nth-child(10) {
+  transition-delay: .50s;
+}
+
+.letter:nth-child(11) {
+  transition-delay: .55s;
+}
+
+.letter:nth-child(12) {
+  transition-delay: .60s;
 }
 
 .logoText {
