--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,7 +11,9 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  background-color: black;
+  background: rgba(0, 0, 0, 0.20);
+
+  backdrop-filter: blur(7.5px);
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
@@ -43,22 +45,6 @@
   transform: translateY(-17px) translateZ(0); /* Base state */
   transition: transform 0.3s ease;
   text-shadow: 0px 17px 0px rgb(255, 255, 255);
-}
-
-.duplicatedLetter {
-  backface-visibility: hidden;
-  position: absolute;
-  font-style: normal;
-  transform: translateY(-17px) translateZ(0); /* Base state */
-  transition: transform 0.3s ease;
-  visibility: hidden;
-  
-}
-
-.link:hover .duplicatedLetter {
-  transform: translateY(0px) translateZ(0);
-  visibility: visible;
-  
 }
 
 
