--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 100%;
-  height: 45.25rem;
+  height: 56.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,7 +10,7 @@
 
 .contentContainer {
   display: inline-flex;
-  padding: 10.125rem 2.5rem 12.25rem 2.5rem;
+  padding: 17.75rem 2.5rem 20.88rem 2.5rem;
   align-items: center;
   gap: 16.0625rem;
   
@@ -51,7 +51,7 @@
   justify-content: center;
   align-items: center;
   gap: 4px;
-
+  text-decoration: none;
   color: #FFF;
   font-family: "TWK Lausanne Pan 300";
   font-size: 14px;
@@ -61,14 +61,15 @@
 }
 
 .introduction {
-  max-width: 867px;
+  max-width: 55rem;
   color: #FFF;
+
   font-family: "TWK Lausanne Pan 300";
-  font-size: 3.25rem;
+  font-size: 4rem;
   font-style: normal;
   font-weight: 300;
-  line-height: 120%; /* 3.9rem */
-  letter-spacing: -0.065rem;
+  line-height: 115%; /* 4.6rem */
+  letter-spacing: -0.08rem;
 }
 
 .underline {
@@ -195,5 +196,40 @@
   to {
     opacity: 1;
   }
+}
+
+.pointer {
+  position: relative;
+}
+
+.arrow {
+  transform: translateY(0px) translateZ(0) translateX(0px); /* Base state */
+  transition: transform 0.3s ease;
+}
+
+.hiddenArrow {
+  transform: translateX(-18px); /* Adjust the hidden position */
+  transition: transform 0.3s ease;
+   /* Make it invisible initially */
+}
+
+
+.aboutButtonContainer:hover .arrow {
+  
+  transform: translateY(0px) translateZ(0px) translateX(18px); /* Base state */
+  transition: transform 0.3s ease;
+  text-shadow: 0px 0px 0px rgb(255, 255, 255);
+}
+
+.aboutButtonContainer:hover .hiddenArrow {
+  
+  transform: translateY(0px) translateZ(0px) translateX(0px); /* Base state */
+  transition: transform 0.3s ease;
+  text-shadow: 0px 0px 0px rgb(255, 255, 255);
+}
+
+
+.aboutButtonContainer:hover .circle {
+  fill: white;
 }
 
