--- a/src/components/slideshow/slideshow.module.css
+++ b/src/components/slideshow/slideshow.module.css
@@ -2,13 +2,10 @@
   position: relative;
   height: 67.125rem;
   display: flex;
-
   flex-direction: row;
-  align-items: flex-start; /* Align items to the bottom */
+  align-items: flex-start; /* Align items to the start */
   justify-content: center;
-  
   overflow: hidden;
-  --g:radial-gradient(55% 20px, #0009, #0000);  
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.60) 60%, #000 100%);
 }
 
@@ -16,14 +13,29 @@
   width: 80vw;
   height: 100vh;
   border-radius: 132.95456rem 132.95456rem 0rem 0rem;
-
 }
 
 .rectangle {
   position: absolute;
   width: 121.125rem;
-height: 15.75rem;
-margin-top: -22rem;
-flex-shrink: 0;
-background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.60) 60%, #000 100%);
+  height: 15.75rem;
+  margin-top: -22rem;
+  flex-shrink: 0;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.60) 60%, #000 100%);
+}
+
+/* Vendor prefixes for older iOS versions */
+@supports (-webkit-appearance: none) {
+  .imageContainer {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -webkit-align-items: flex-start;
+    -webkit-justify-content: center;
+  }
+
+  .image {
+    -webkit-border-radius: 132.95456rem 132.95456rem 0rem 0rem;
+  }
 }
