--- a/src/components/slideshow/slideshow.module.css
+++ b/src/components/slideshow/slideshow.module.css
@@ -1,6 +1,6 @@
 .imageContainer {
   position: relative;
-  height: 67.125rem;
+  
   display: flex;
   flex-direction: row;
   align-items: flex-start; /* Align items to the start */
@@ -9,16 +9,19 @@
 }
 
 .image {
+  
   width: 80vw;
   height: 100vh;
   border-radius: 132.95456rem 132.95456rem 0rem 0rem;
 }
 
 .rectangle {
+  display: flex;
   position: absolute;
-  width: 121.125rem;
-  height: 15.75rem;
-  margin-top: -22rem;
+  bottom: 0; /* Stick to the bottom */
+  
+  width: 100%;
+  height: 18.75rem;
   flex-shrink: 0;
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.60) 60%, #000 100%);
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.60) 60%, #000 100%);
