--- a/src/components/services/services.module.css
+++ b/src/components/services/services.module.css
@@ -88,8 +88,10 @@
   flex-shrink: 0;
   border-radius: 2.5rem;
   border: 1px solid #FFF;
-  opacity: 0.25;
+  
+  overflow: hidden; /* Ensure content fits within the border */
 }
+
 
 .list {
   color: #FFF;
