--- a/src/components/slideshow/slideshow.module.css
+++ b/src/components/slideshow/slideshow.module.css
@@ -9,36 +9,8 @@
 }
 
 .image {
-  
-  width: 80vw;
-  height: 100vh;
-  border-radius: 132.95456rem 132.95456rem 0rem 0rem;
+  width: 1360px;
+  height: 765px;
+  border-radius: 35px;
 }
 
-.rectangle {
-  display: flex;
-  position: absolute;
-  bottom: 0; /* Stick to the bottom */
-  
-  width: 100%;
-  height: 18.75rem;
-  flex-shrink: 0;
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.60) 60%, #000 100%);
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.60) 60%, #000 100%);
-}
-
-/* Vendor prefixes for older iOS versions */
-@supports (-webkit-appearance: none) {
-  .imageContainer {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    -webkit-align-items: flex-start;
-    -webkit-justify-content: center;
-  }
-
-  .image {
-    -webkit-border-radius: 132.95456rem 132.95456rem 0rem 0rem;
-  }
-}
