--- a/src/components/brands/brands.module.css
+++ b/src/components/brands/brands.module.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 100%;
   padding: 0rem 2.5rem;
-  height: 42.3rem;
+  height: 25.3rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,7 +15,7 @@
   width: 90rem;
   
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 0.625rem;
 }
 
@@ -26,13 +26,14 @@
   width: 100%;
   margin-bottom: 2rem;
   color: #FFF;
-  font-family: "TWK Lausanne Pan 400";
-  font-size: 0.875rem;
+  
+  font-family: "TWK Lausanne Pan 300";
+  font-size: 1.25rem;
   font-style: normal;
-  font-weight: 400;
-  line-height: 110%; /* 0.9625rem */
-  letter-spacing: -0.0175rem;
-  opacity: 0.4;
+  font-weight: 300;
+  line-height: 110%; /* 1.375rem */
+  letter-spacing: -0.025rem;
+ 
 }
 
 .body {
@@ -41,6 +42,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  width: 68.75rem;
 }
 
 .footer {
@@ -49,29 +51,67 @@
   justify-content: center;
   width: 100%;
   margin-top: 1.07rem;
-  color: #FFF;
-  font-family: "TWK Lausanne Pan 400";
-  font-size: 0.875rem;
+ width: 20.1rem;
+  
+  border-radius: 6.25rem;
+background: rgba(255, 255, 255, 0.10);
+padding: 0.75rem 1.5rem;
+
+}
+
+.footerText {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "TWK Lausanne Pan 300";
+  font-size: 1rem;
   font-style: normal;
-  font-weight: 400;
-  line-height: 110%; /* 0.9625rem */
-  letter-spacing: -0.0175rem;
-  opacity: 0.4;
+  font-weight: 300;
+  line-height: 110%; /* 1.1rem */
+  letter-spacing: -0.02rem;
+
+  background: linear-gradient(90deg, #FFF 0%, #EDFF23 100%);
+  background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
 }
 
 .rectangle {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 16.25rem;
-  height: 16.25rem;
+  width: 13.75rem;
+  height: 7.75rem;
+  
   flex-shrink: 0;
-
-  border-radius: 1.25rem;
-  background: rgba(255, 255, 255, 0.10);
-  margin-right: 0.94rem;
-  margin-bottom: 0.94rem;
+  border-radius: 0.9375rem;
+  
+  transition: background 0.3s, fill 0.3s;
+  position: relative; /* Ensure position context for absolute child */
 }
+
+.rectangle:hover {
+  background: rgba(255, 255, 255, 0.10);
+}
+
+
+.newPath {
+
+}
+
+.rectangle:hover .newPath {
+  fill: url(#gradient); /* Apply the gradient fill on hover */
+  fill-rule: url(#evenodd);
+  clip-rule: url(#evenodd);
+}
+
+.rectangle svg {
+  fill: none;
+}
+
+
+
+
 
 .rectangle:nth-child(5n+5) {
   margin-right: 0;
