--- a/src/components/selected/selected.module.css
+++ b/src/components/selected/selected.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 100%;
-  height: 122.5rem;
+  height: 244rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,6 +37,7 @@
   align-items: flex-start;
   gap: 1.5rem;
   padding-bottom: 4rem;
+  margin-top: 4rem;
 }
 
 .shiftContainer {
@@ -44,7 +45,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding-bottom: 4rem;
-  height: 63.1rem;
+  
 }
 
 .shiftHeader {
@@ -67,6 +68,81 @@
   margin-bottom: 3rem;
 }
 
+.saas {
+  display: flex;
+  padding: 0rem 2.5rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.5rem;
+  padding-bottom: 4rem;
+}
+
+.saasContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-bottom: 4rem;
+  height: 63.1rem;
+}
+
+.saasHeader {
+  
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: left;
+  flex-wrap: wrap;
+  
+
+  color: rgba(255, 255, 255, 0.60);
+  font-family: "TWK Lausanne Pan 300";
+  font-size: 3.25rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 110%;
+  letter-spacing: -0.065rem;
+  max-width: 56.875rem;
+  
+  margin-bottom: 3rem;
+}
+
+.saasImageContainer {
+  width: 85rem;
+height: 46.5rem;
+flex-shrink: 0;
+  border-radius: 2.5rem;
+  background: #2344D6;
+  overflow: hidden;
+
+}
+
+.chum {
+
+}
+
+.chumImageContainer {
+  width: 37.5rem;
+  height: 25rem;
+  flex-shrink: 0;
+  border-radius: 2.5rem;
+  background: #2344D6;
+  overflow: hidden;
+
+}
+
+.trackable {
+
+
+ }
+
+ .trackableImageContainer { 
+  width: 37.5rem;
+  height: 42.5rem;
+  flex-shrink: 0;
+  border-radius: 2.5rem;
+  background: #2344D6;
+  overflow: hidden;
+ }
+
 .shiftImage {
   border-radius: 2.5rem;
   background: url(../../images/shift.jpeg) lightgray 50%;
@@ -76,8 +152,35 @@
 flex-shrink: 0;
 }
 
+.saasImage {
+  border-radius: 2.5rem;
+  background: url(../../images/selected2.jpeg) lightgray 50%;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+flex-shrink: 0;
+}
+
+.chumImage {
+  border-radius: 2.5rem;
+  background: url(../../images/selected1.jpeg) lightgray 50%;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+flex-shrink: 0;
+}
+
+.trackableImage {
+  border-radius: 2.5rem;
+  background: url(../../images/selected5.jpeg) lightgray 50%;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+flex-shrink: 0;
+}
+
 .poznanImage {
-  background: url(../../images/poznan.png) lightgray 50%;
+  background: url(../../images/selected3.jpeg) lightgray 50%;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -85,10 +188,12 @@ flex-shrink: 0;
 }
 
 .stacknetImage {
-  background: url(../../images/stacknet.jpeg) lightgray 50%;
+  background: url(../../images/selected3.png) lightgray 50%;
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  width: 33.98788rem;
+  height: 60.94006rem;
+  border-color: #21143A;
+  background-color: #21143A;
 flex-shrink: 0;
 }
 
@@ -104,7 +209,7 @@ flex-shrink: 0;
 .poznanImageContainer {
   flex-shrink: 0;
   width: 37.5rem;
-  height: 25rem;
+  height: 42.5rem;
 
   border-radius: 2.5rem;
   background: #2344D6;
@@ -114,10 +219,13 @@ flex-shrink: 0;
 .stacknetImageContainer {
   flex-shrink: 0;
   width: 37.5rem;
-  height: 42.5rem;
+  height: 25rem;
   border-radius: 2.5rem;
-  background: #2344D6;
+  background: #21143A;
 overflow: hidden;
+display: flex;
+justify-content: center;
+padding-top: 1.19rem;
 }
 
 .textHeader {
